# simplon_projet4-Prefect_MLFactory

./: .env  Projet_2_1_MLFactory.md  Projet_3_0_Prefect_MLFactory.md  README.md  docker-compose.yml  monTutoriel.md  pyproject.toml  tutoriel_projet3.md
serveur1/: .dockerignore  .gitignore  README.md  docker-compose.yml  env.example  prefect.yaml  pyproject.toml
serveur1/flows/: task.py
serveur2/: pyproject.toml
serveur2/src/api/: main.py
serveur2/src/front/: Dockerfile
src/api/: Dockerfile
src/front/: app.py
src/train/: Dockerfile.worker  train.py
